--- a/cart_summary.html
+++ b/cart_summary.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Acme Company | Your cart summary</title>
+        <link rel="stylesheet" href="client/dist/bundle.css" />
     </head>
     <body>
-        <div id="shop"></div>
+    <div id="shop"></div>
         <script src="client/dist/bundle.js"></script>
     </body>
 </html>
